ash-code/tui/src/app/fullscreen/snapshots/app__fullscreen__tests__policy_top_tip_current_and_next.snap
---
source: ash-code/tui/src/app/fullscreen/frame_tests.rs
expression: visible
---
  .                                                                                                [— / —] [Dashboard]  
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
  ⏸ current: ask permissions on · ⏩  next: auto review on                                    shift+tab to cycle policy  
  ╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮  
  │ >                                                                                                                │  
  ╰──────────────────────────────────────────────────────────────────────────────────────────────── Automatic model ─╯  
                                                                                                                        
  Enter send  ·  shift+tab permissions  ·  /home
