ash-code/tui/src/app/fullscreen/snapshots/app__fullscreen__tests__policy_top_tip_expired.snap
---
source: ash-code/tui/src/app/fullscreen/frame_tests.rs
expression: "render(&app, 120, 20)"
---
  .                                                                                                [— / —] [Dashboard]  
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
  ╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮  
  │ >                                                                                                                │  
  ╰──────────────────────────────────────────────────────────────────────────────────────────────── Automatic model ─╯  
                                                                                                                        
  Enter send  ·  shift+tab permissions  ·  /home
