ash-code/tui/src/app/fullscreen/snapshots/app__fullscreen__tests__short_provider_panel.snap
---
source: ash-code/tui/src/app/fullscreen/frame_tests.rs
expression: output
---
  .                                                                            [— / —] [Dashboard]  
                                                                                                    
            ┌── Custom provider ──────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │  Provider name                                                          │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ Provider name                                                      │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │> Base URL                                                               │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ https://example.com/v1                                             │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
  ╭─────────│                                                                         │──────────╮  
  │ > Build │  Enter to edit  ·  Tab/Shift+Tab to move  ·  Esc to return              │          │  
  ╰─────────└─────────────────────────────────────────────────────────────────────────┘ic model ─╯
