ash-code/tui/src/app/fullscreen/snapshots/app__fullscreen__tests__startup_panel.snap
---
source: ash-code/tui/src/app/fullscreen/frame_tests.rs
expression: "render(&app, 80, 20)"
---
  .                                                        [— / —] [Dashboard]  
                                                                                
> /start┌── Startup ───────────────────────────────────────────────[✗]─┐        
        │                                                              │        
        │> Mode  ·  New                                                │        
        │  Workspace  ·  .                                             │        
        │  Profile  ·  default                                         │        
        │  Connection  ·  Local App Server                             │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
  ╭─────│                                                              │─────╮  
  │ > Bu│  Esc to close                                                │     │  
  ╰─────└──────────────────────────────────────────────────────────────┘del ─╯
