ash-code/tui/src/app/fullscreen/snapshots/app__fullscreen__tests__status_panel_adaptive_height.snap
---
source: ash-code/tui/src/app/fullscreen/frame_tests.rs
expression: rendered
---
  .                                                        [— / —] [Dashboard]  
                                                                                
        ┌── Status ────────────────────────────────────────────────[✗]─┐        
        │                                                              │        
        │   Thread    Processes                                        │        
        │                                                              │        
        │  Model:                    openai/gpt                        │        
        │  Full context window:      100,000 tokens                    │        
        │  Available context window: 90,000 tokens                     │        
        │  Remaining context window: 80,000 tokens (88.8%)             │        
        │  Model calls:              0                                 │        
        │  Input tokens:             0 tokens                          │        
        │  Cached input:             0 tokens                          │        
        │  Cached input share:       unknown                           │        
        │  Cache writes:             0 tokens                          │        
  ╭─────│  Output tokens:            0 tokens                          │─────╮  
  │ > / │  Tab to switch · Esc to close                                │     │  
  ╰─────└──────────────────────────────────────────────────────────────┘del ─╯
