ash-code/tui/src/app/fullscreen/snapshots/app__fullscreen__tests__transcript_jump_to_bottom.snap
---
source: ash-code/tui/src/app/fullscreen/frame_tests.rs
expression: "render(&app, 50, 16)"
---
  .                          [— / —] [Dashboard]  
                                                  
● Model invocation failed 2                       
                                                  
● Model invocation failed 3                       
                                                  
● Model invocation failed 4                       
                                                  
● Model invocation failed 5                       
             Jump to bottom (click) ↓             
  ⏸ ask permissions on                            
  ╭────────────────────────────────────────────╮  
  │ >                                          │  
  ╰────────────────────────── Automatic model ─╯  
                                                  
  Enter send  ·  shift+tab permissions  ·  /home
